<resources>
    <string name="app_name">Intents</string>
    <string name="paginaweb">Abrir página web</string>
    <string name="llamadatel">Llamada de teléfono</string>
    <string name="googlemaps">Google maps</string>
    <string name="hacerfoto">Hacer foto</string>
    <string name="mandarcorreo">Mandar correo</string>
    <string name="busquedaweb">Búsqueda web</string>
    <string name="dialertelefono">Dialer de teléfono</string>
    <string name="streetview">Street View</string>
    <string name="compartir">Compartir con...</string>
</resources>
