<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="intents.example.net.intents.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paginaweb"
        android:id="@+id/botonweb"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/botonllamada"
        android:text="@string/llamadatel"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/googlemaps"
        android:id="@+id/botongoogle"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hacerfoto"
        android:id="@+id/botonfoto"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mandarcorreo"
        android:id="@+id/botoncorreo"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/busquedaweb"
        android:id="@+id/botonbusqueda"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialertelefono"
        android:id="@+id/botondialer"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/streetview"
        android:id="@+id/botonstreetview"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/compartir"
        android:id="@+id/botoncompartir"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

</LinearLayout>
